tests/errors/init_state/move_and_drop/call_args_move_then_copy.err.expected
error: at 5:13: [INIT-UseAfterMove] In function 'f', block 'entry': variable 'x' is used after move
   |
 5 |             call take_two(move x, copy x);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
